clib_packages/xforms/package/include/xforms_forms.h


typedef enum {
    FL_ON          = 1,
    FL_OK          = 1,
    FL_VALID       = 1,
    FL_PREEMPT     = 1,
    FL_AUTO        = 2,
    FL_WHEN_NEEDED = FL_AUTO,
    FL_OFF         = 0,
    FL_CANCEL      = 0,
    FL_INVALID     = 0,
    FL_IGNORE      = -1
}blablabla;
typedef int FL_Coord;
typedef enum {
    FL_FULLBORDER = 1,      
    FL_TRANSIENT,           
    FL_NOBORDER             
 }blablabla;
typedef enum {
    FL_MBUTTON1 = 1,
    FL_MBUTTON2,
    FL_MBUTTON3,
    FL_MBUTTON4,
    FL_MBUTTON5
}blablabla;
typedef enum {
    FL_PUP_NONE,
    FL_PUP_GREY  = 1,
    FL_PUP_BOX   = 2,
    FL_PUP_CHECK = 4,
    FL_PUP_RADIO = 8
}blablabla;
typedef enum {
  FL_BEING_HIDDEN = -1,
  FL_HIDDEN       = 0,
  FL_INVISIBLE    = FL_HIDDEN,
  FL_VISIBLE      = 1
}blablabla;
typedef enum {
    FL_READ   = 1,
    FL_WRITE  = 2,
    FL_EXCEPT = 4
}blablabla;
typedef enum {
	FL_INPUT_END_EVENT_CLASSIC = 0,
	FL_INPUT_END_EVENT_ALWAYS  = 1
}blablabla;
#define FL_XBASIC_H
typedef enum {
    FL_XOR  = GXxor,
    FL_COPY = GXcopy,
    FL_AND  = GXand
}blablabla;
typedef enum {
    FL_IllegalVisual = -1,
    FL_StaticGray    = StaticGray,
    FL_GrayScale     = GrayScale,
    FL_StaticColor   = StaticColor,
    FL_PseudoColor   = PseudoColor,
    FL_TrueColor     = TrueColor,
    FL_DirectColor   = DirectColor,
    FL_DefaultVisual = 10         
}blablabla;
typedef enum {
    FL_North         = NorthGravity,
    FL_NorthEast     = NorthEastGravity,
    FL_NorthWest     = NorthWestGravity,
    FL_South         = SouthGravity,
    FL_SouthEast     = SouthEastGravity,
    FL_SouthWest     = SouthWestGravity,
    FL_East          = EastGravity,
    FL_West          = WestGravity,
    FL_NoGravity     = ForgetGravity,
    FL_ForgetGravity = ForgetGravity
}blablabla;
typedef enum {
    FL_SOLID          = LineSolid,
    FL_USERDASH       = LineOnOffDash,
    FL_USERDOUBLEDASH = LineDoubleDash,
    FL_DOT,
    FL_DOTDASH,
    FL_DASH,
    FL_LONGDASH
}blablabla;
typedef int ( * FL_APPEVENT_CB )( XEvent *, void * );
extern void fl_set_idle_delta( long delta );
extern FL_APPEVENT_CB fl_add_event_callback( Window           win,
                                                int              ev,
                                                FL_APPEVENT_CB   wincb,
                                                void           * user_data );
extern void fl_remove_event_callback( Window win,
                                         int    ev );
extern void fl_activate_event_callbacks( Window win );
extern XEvent *fl_print_xevent_name( const char   * where,
                                        const XEvent * xev );
extern void fl_XFlush( void );
#define metakey_down( mask )     ( ( mask ) & Mod1Mask )
#define shiftkey_down( mask )    ( ( mask ) & ShiftMask )
#define controlkey_down( mask )  ( ( mask ) & ControlMask )
#define button_down( mask )      (    ( ( mask ) & Button1Mask )  \
                                   | ( ( mask ) & Button2Mask )  \
                                   | ( ( mask ) & Button3Mask )  \
                                   | ( ( mask ) & Button4Mask )  \
                                   | ( ( mask ) & Button5Mask ) )
#define fl_keypressed            fl_keysym_pressed
typedef enum {
    FL_NONE,
    FL_SHORT = 10,
    FL_BOOL,
    FL_INT,
    FL_LONG,
    FL_FLOAT,
    FL_STRING
} FL_RTYPE;
typedef struct {
    const char * res_name;      
    const char * res_class;     
    FL_RTYPE     type;          
    void       * var;           
    const char * defval;        
    int          nbytes;        
} FL_RESOURCE;
extern Display * fl_initialize( int        * na,
                                   char       * arg[ ],
                                   const char * appclass,
                                   FL_CMD_OPT * appopt,
                                   int          nappopt );
extern void fl_finish( void );
extern const char * fl_get_resource( const char * rname,
                                        const char * cname,
                                        FL_RTYPE     dtype,
                                        const char * defval,
                                        void       * val,
                                        int          size );
extern void fl_set_resource( const char * str,
                                const char * val );
extern void fl_get_app_resources( FL_RESOURCE * appresource,
                                     int           n );
extern void fl_set_visualID( long id );
extern int fl_keysym_pressed( KeySym k );
#define buttonLabelSize  buttonFontSize
#define sliderLabelSize  sliderFontSize
#define inputLabelSize   inputFontSize
typedef struct {
    float  rgamma,
           ggamma,
           bgamma;
    int    debug,
           sync;
    int    depth,
           vclass,
           doubleBuffer;
    int    ulPropWidth,         
           ulThickness;
    int    buttonFontSize;
    int    sliderFontSize;
    int    inputFontSize;
    int    browserFontSize;
    int    menuFontSize;
    int    choiceFontSize;
    int    labelFontSize;       
    int    pupFontSize,         
           pupFontStyle;
    int    privateColormap;
    int    sharedColormap;
    int    standardColormap;
    int    scrollbarType;
    int    backingStore;
    int    coordUnit;
    int    borderWidth;
    int    safe;
    char * rgbfile;             
    char   vname[ 24 ];
} FL_IOPT;
#define FL_PDButtonLabelSize  FL_PDButtonFontSize
#define FL_PDSliderLabelSize  FL_PDSliderFontSize
#define FL_PDInputLabelSize   FL_PDInputFontSize
typedef enum {
    FL_PDDepth           = ( 1 <<  1 ),
    FL_PDClass           = ( 1 <<  2 ),
    FL_PDDouble          = ( 1 <<  3 ),
    FL_PDSync            = ( 1 <<  4 ),
    FL_PDPrivateMap      = ( 1 <<  5 ),
    FL_PDScrollbarType   = ( 1 <<  6 ),
    FL_PDPupFontSize     = ( 1 <<  7 ),
    FL_PDButtonFontSize  = ( 1 <<  8 ),
    FL_PDInputFontSize   = ( 1 <<  9 ),
    FL_PDSliderFontSize  = ( 1 << 10 ),
    FL_PDVisual          = ( 1 << 11 ),
    FL_PDULThickness     = ( 1 << 12 ),
    FL_PDULPropWidth     = ( 1 << 13 ),
    FL_PDBS              = ( 1 << 14 ),
    FL_PDCoordUnit       = ( 1 << 15 ),
    FL_PDDebug           = ( 1 << 16 ),
    FL_PDSharedMap       = ( 1 << 17 ),
    FL_PDStandardMap     = ( 1 << 18 ),
    FL_PDBorderWidth     = ( 1 << 19 ),
    FL_PDSafe            = ( 1 << 20 ),
    FL_PDMenuFontSize    = ( 1 << 21 ),
    FL_PDBrowserFontSize = ( 1 << 22 ),
    FL_PDChoiceFontSize  = ( 1 << 23 ),
    FL_PDLabelFontSize   = ( 1 << 24 )
}blablabla;
#define FL_PDButtonLabel   FL_PDButtonLabelSize
extern void fl_set_defaults( unsigned   long mask,
                                FL_IOPT  * cntl );
extern void fl_set_tabstop( const char * s );
extern int fl_get_visual_depth( void );
extern int fl_is_global_clipped( void );
extern int fl_is_clipped( int include_global );
extern int fl_is_text_clipped( int include_global );
extern void fl_set_clipping( FL_Coord x,
                                FL_Coord y,
                                FL_Coord w,
                                FL_Coord h );
extern void fl_unset_clipping( void );
extern void fl_set_text_clipping( FL_Coord x,
                                     FL_Coord y,
                                     FL_Coord w,
                                     FL_Coord h );
extern void fl_unset_text_clipping( void );
extern int fl_get_global_clipping( FL_COORD * x,
                                      FL_COORD * y,
                                      FL_COORD * w,
                                      FL_COORD * h );
extern int fl_get_clipping( int        include_global,
                               FL_COORD * x,
                               FL_COORD * y,
                               FL_COORD * w,
                               FL_COORD * h );
extern int fl_get_text_clipping( int        include_global,
                                    FL_COORD * x,
                                    FL_COORD * y,
                                    FL_COORD * w,
                                    FL_COORD * h );
extern void fl_set_gc_clipping( GC       gc,
                                   FL_Coord x,
                                   FL_Coord y,
                                   FL_Coord w,
                                   FL_Coord h );
extern void fl_unset_gc_clipping( GC gc );
#define FL_PCBITS         8                   
#define FL_PCMAX          ( ( 1 << FL_PCBITS ) - 1 )
#define FL_PCCLAMP( a )   \
    ( ( a ) > ( FL_PCMAX ) ? ( FL_PCMAX ) : ( ( a ) < 0 ? 0 : ( a ) ) )
#define FL_RMASK           0x000000ff
#define FL_RSHIFT          0
#define FL_GMASK           0x0000ff00
#define FL_GSHIFT          8
#define FL_BMASK           0x00ff0000
#define FL_BSHIFT          16
#define FL_AMASK           0xff000000
#define FL_ASHIFT          24
#define FL_GETR( packed )  ( ( ( packed ) >> FL_RSHIFT ) & FL_RMASK )
#define FL_GETG( packed )  ( ( ( packed ) >> FL_GSHIFT ) & FL_PCMAX )
#define FL_GETB( packed )  ( ( ( packed ) >> FL_BSHIFT ) & FL_PCMAX )
#define FL_GETA( packed )  ( ( ( packed ) >> FL_ASHIFT ) & FL_PCMAX )
#define FL_PACK3( r, g, b )   \
    ( ( ( r ) << FL_RSHIFT ) | ( ( g ) << FL_GSHIFT ) | ( ( b ) << FL_BSHIFT ) )
#define FL_PACK            FL_PACK3
#define FL_PACK4( r, g, b, a ) ( FL_PACK3( r, g, b ) | ( ( a ) << FL_ASHIFT ) )
#define FL_UNPACK3 FL_UNPACK
#define FL_POPUP_H
typedef enum {
    FL_POPUP_NORMAL_SELECT,
    FL_POPUP_DRAG_SELECT
}blablabla;
typedef enum {
    FL_POPUP_NONE     = 0,
    FL_POPUP_DISABLED = 1,               
    FL_POPUP_HIDDEN   = 2,               
    FL_POPUP_CHECKED  = 4                
}blablabla;
typedef enum {
    FL_POPUP_NORMAL,                     
    FL_POPUP_TOGGLE,                     
    FL_POPUP_RADIO,                      
    FL_POPUP_SUB,                        
    FL_POPUP_LINE                        
}blablabla;
typedef enum {
    FL_POPUP_BACKGROUND_COLOR,
    FL_POPUP_HIGHLIGHT_COLOR,
    FL_POPUP_TITLE_COLOR,
    FL_POPUP_TEXT_COLOR,
    FL_POPUP_HIGHLIGHT_TEXT_COLOR,
    FL_POPUP_DISABLED_TEXT_COLOR,
    FL_POPUP_RADIO_COLOR
}blablabla;
typedef enum {
    FL_ANALOG_CLOCK,
    FL_DIGITAL_CLOCK
}blablabla;
typedef enum {
    FL_INVISIBLE_CURSOR = -2,
    FL_DEFAULT_CURSOR   = -1,
    FL_BUSY_CURSOR      = XC_watch,
    FL_CROSSHAIR_CURSOR = XC_tcross,
    FL_KILL_CURSOR      = XC_pirate,
    FL_NWARROW_CURSOR   = XC_top_left_arrow,
    FL_NEARROW_CURSOR   = XC_arrow
}blablabla;
typedef enum {
    FL_DIAL_CW,
    FL_DIAL_CCW
}blablabla;
typedef enum {
    FT_FILE,
    FT_DIR,
    FT_LINK,
    FT_SOCK,
    FT_FIFO,
    FT_BLK,
    FT_CHR,
    FT_OTHER
}blablabla;
typedef enum {
    FL_ALPHASORT = 1,       
    FL_RALPHASORT,          
    FL_MTIMESORT,           
    FL_RMTIMESORT,          
    FL_SIZESORT,            
    FL_RSIZESORT,           
    FL_CASEALPHASORT,       
    FL_RCASEALPHASORT       
}blablabla;
typedef enum {
   FLPS_AUTO,                  
   FLPS_LANDSCAPE,             
   FLPS_PORTRAIT,              
   FLPS_BESTFIT                
}blablabla;
typedef enum {
  FLPS_BW = -1,
  FLPS_GRAYSCALE,
  FLPS_COLOR
}blablabla;
typedef enum {
    FL_NORMAL_FORMBROWSER
}blablabla;
typedef enum {
   FL_SMOOTH_SCROLL,
   FL_JUMP_SCROLL
}blablabla;
typedef enum {
    FL_NO_FRAME,
    FL_UP_FRAME,
    FL_DOWN_FRAME,
    FL_BORDER_FRAME,
    FL_SHADOW_FRAME,
    FL_ENGRAVED_FRAME,
    FL_ROUNDED_FRAME,
    FL_EMBOSSED_FRAME,
    FL_OVAL_FRAME
}blablabla;
typedef enum {
    FL_INPUT_MMDD,
    FL_INPUT_DDMM
}blablabla;
typedef enum {
    FL_NORMAL_INPUT_MODE,
    FL_DOS_INPUT_MODE
}blablabla;
typedef enum {
    FL_NORMAL_NMENU,
    FL_NORMAL_TOUCH_NMENU,
    FL_BUTTON_NMENU,
    FL_BUTTON_TOUCH_NMENU
}blablabla;
typedef enum {
    FL_VERT_SCROLLBAR,
    FL_HOR_SCROLLBAR,
    FL_VERT_THIN_SCROLLBAR,
    FL_HOR_THIN_SCROLLBAR,
    FL_VERT_NICE_SCROLLBAR,
    FL_HOR_NICE_SCROLLBAR,
    FL_VERT_PLAIN_SCROLLBAR,
    FL_HOR_PLAIN_SCROLLBAR,
    FL_HOR_BASIC_SCROLLBAR  = FL_HOR_PLAIN_SCROLLBAR,
    FL_VERT_BASIC_SCROLLBAR = FL_VERT_PLAIN_SCROLLBAR
}blablabla;
typedef enum {
	FL_NORMAL_SCROLLBAR,
	FL_THIN_SCROLLBAR,
	FL_NICE_SCROLLBAR,
	FL_PLAIN_SCROLLBAR
}blablabla;
typedef enum {
    FL_NORMAL_SELECT,
    FL_MENU_SELECT,
    FL_DROPLIST_SELECT
}blablabla;
typedef enum {
    FL_TOP_TABFOLDER,       
    FL_BOTTOM_TABFOLDER,
    FL_LEFT_TABFOLDER,
    FL_RIGHT_TABFOLDER,
    FL_NORMAL_TABFOLDER = FL_TOP_TABFOLDER
}blablabla;
typedef enum {
    FL_NO,
    FL_FIT,
    FL_ENLARGE_ONLY
}blablabla;
typedef enum {
    FL_NORMAL_TEXT
}blablabla;
typedef enum {
    FL_VERT_THUMBWHEEL,
    FL_HOR_THUMBWHEEL
}blablabla;
typedef enum {
    FL_LINEAR,
    FL_LOG
}blablabla;
typedef enum {
    FL_GRID_NONE  = 0,
    FL_GRID_MAJOR = 1,
    FL_GRID_MINOR = 2
}blablabla;