xforms/package/xforms_forms.pas


procedure fl_set_idle_delta(delta: cint); cdecl; external;
function fl_add_event_callback(win: TWindow; ev: cint; wincb: TFL_APPEVENT_CB; user_data: pointer): TFL_APPEVENT_CB; cdecl; external;
procedure fl_remove_event_callback(win: TWindow; ev: cint); cdecl; external;
procedure fl_activate_event_callbacks(win: TWindow); cdecl; external;
(* Const before type ignored *)
(* Const before type ignored *)
function fl_print_xevent_name(where: PChar; xev: PXEvent): PXEvent; cdecl; external;
procedure fl_XFlush; cdecl; external;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function metakey_down(mask: cint): Tmask;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function shiftkey_down(mask: cint): Tmask;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function controlkey_down(mask: cint): Tmask;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function button_down(mask: cint): cint;

//const
//fl_keypressed = fl_keysym_pressed;
function fl_keypressed(k: TKeySym): cint; cdecl; external Name 'fl_keysym_pressed';
{***************** Resources ************** }
type
  PFL_RTYPE = ^TFL_RTYPE;
  TFL_RTYPE = cint;

const
  FL_NONE = 0;
  FL_SHORT = 10;
  FL_BOOL = 11;
  FL_INT = 12;
  FL_LONG = 13;
  FL_FLOAT = 14;
  FL_STRING = 15;

  (* Const before type ignored *)
  { resource name                         }
  (* Const before type ignored *)
  { resource class                        }
  { FL_INT, FL_FLOAT, FL_BOOL, FL_STRING  }
  { address for the variable              }
  (* Const before type ignored *)
  { default setting in string form        }
  { used only for strings                 }
type
  PFL_RESOURCE = ^TFL_RESOURCE;

  TFL_RESOURCE = record
    res_name: PChar;
    res_class: PChar;
    _type: TFL_RTYPE;
    var_: pointer;
    defval: PChar;
    nbytes: cint;
  end;

  //  TFL_resource = TFL_RESOURCE;
  PFL_CMD_OPT = ^TFL_CMD_OPT;
  TFL_CMD_OPT = TXrmOptionDescRec;

  (* Const before type ignored *)

function fl_initialize(na: Pcint; arg: PPchar; appclass: PChar; appopt: PFL_CMD_OPT; nappopt: cint): PDisplay; cdecl; external;
procedure fl_finish; cdecl; external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function fl_get_resource(rname: PChar; cname: PChar; dtype: TFL_RTYPE; defval: PChar; val: pointer; size: cint): PChar; cdecl; external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure fl_set_resource(str: PChar; val: PChar); cdecl; external;
procedure fl_get_app_resources(appresource: PFL_RESOURCE; n: cint); cdecl; external;
procedure fl_set_visualID(id: cint); cdecl; external;
function fl_keysym_pressed(k: TKeySym): cint; cdecl; external;
//const
//  buttonLabelSize = buttonFontSize;
//  sliderLabelSize = sliderFontSize;
//  inputLabelSize = inputFontSize;
const
  buttonLabelSize = 0;
  sliderLabelSize = 0;
  inputLabelSize = 0;
  { All Form control variables. Named closely as its resource name  }
  { underline stuff        }
  { all other labels fonts  }
  { font for pop-up menus   }
  { where RGB file is, not used  }
type
  PFL_IOPT = ^TFL_IOPT;

  TFL_IOPT = record
    rgamma: single;
    ggamma: single;
    bgamma: single;
    debug: cint;
    sync: cint;
    depth: cint;
    vclass: cint;
    doubleBuffer: cint;
    ulPropWidth: cint;
    ulThickness: cint;
    buttonFontSize: cint;
    sliderFontSize: cint;
    inputFontSize: cint;
    browserFontSize: cint;
    menuFontSize: cint;
    choiceFontSize: cint;
    labelFontSize: cint;
    pupFontSize: cint;
    pupFontStyle: cint;
    privateColormap: cint;
    sharedColormap: cint;
    standardColormap: cint;
    scrollbarType: cint;
    backingStore: cint;
    coordUnit: cint;
    borderWidth: cint;
    safe: cint;
    rgbfile: PChar;
    vname: array[0..23] of char;
  end;

const
  FL_PDDepth = 1 shl 1;
  FL_PDClass = 1 shl 2;
  FL_PDDouble = 1 shl 3;
  FL_PDSync = 1 shl 4;
  FL_PDPrivateMap = 1 shl 5;
  FL_PDScrollbarType = 1 shl 6;
  FL_PDPupFontSize = 1 shl 7;
  FL_PDButtonFontSize = 1 shl 8;
  FL_PDInputFontSize = 1 shl 9;
  FL_PDSliderFontSize = 1 shl 10;
  FL_PDVisual = 1 shl 11;
  FL_PDULThickness = 1 shl 12;
  FL_PDULPropWidth = 1 shl 13;
  FL_PDBS = 1 shl 14;
  FL_PDCoordUnit = 1 shl 15;
  FL_PDDebug = 1 shl 16;
  FL_PDSharedMap = 1 shl 17;
  FL_PDStandardMap = 1 shl 18;
  FL_PDBorderWidth = 1 shl 19;
  FL_PDSafe = 1 shl 20;
  FL_PDMenuFontSize = 1 shl 21;
  FL_PDBrowserFontSize = 1 shl 22;
  FL_PDChoiceFontSize = 1 shl 23;
  FL_PDLabelFontSize = 1 shl 24;

const
  FL_PDButtonLabelSize = FL_PDButtonFontSize;
  FL_PDSliderLabelSize = FL_PDSliderFontSize;
  FL_PDInputLabelSize = FL_PDInputFontSize;


  FL_PDButtonLabel = FL_PDButtonLabelSize;

procedure fl_set_defaults(mask: cuint; cntl: PFL_IOPT); cdecl; external;
(* Const before type ignored *)
procedure fl_set_tabstop(s: PChar); cdecl; external;
function fl_get_visual_depth: cint; cdecl; external;
function fl_is_global_clipped: cint; cdecl; external;
function fl_is_clipped(include_global: cint): cint; cdecl; external;
function fl_is_text_clipped(include_global: cint): cint; cdecl; external;
procedure fl_set_clipping(x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_unset_clipping; cdecl; external;
procedure fl_set_text_clipping(x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_unset_text_clipping; cdecl; external;
function fl_get_global_clipping(x: PFL_COORD; y: PFL_COORD; w: PFL_COORD; h: PFL_COORD): cint; cdecl; external;
function fl_get_clipping(include_global: cint; x: PFL_COORD; y: PFL_COORD; w: PFL_COORD; h: PFL_COORD): cint; cdecl; external;
function fl_get_text_clipping(include_global: cint; x: PFL_COORD; y: PFL_COORD; w: PFL_COORD; h: PFL_COORD): cint; cdecl; external;
procedure fl_set_gc_clipping(gc: TGC; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord); cdecl; external;
procedure fl_unset_gc_clipping(gc: TGC); cdecl; external;
{ How we pack and unpack colors  }
{$ifndef FL_PCBITS}
type
  PFL_PCTYPE = ^TFL_PCTYPE;
  TFL_PCTYPE = byte;
  { primary color type  }
  { primary color bits  }

const
  FL_PCBITS = 8;
  FL_PCMAX = (1 shl FL_PCBITS) - 1;

  { was #define dname(params) para_def_expr }
  { argument types are unknown }
  { return type might be wrong }

function FL_PCCLAMP(a: cint): cint;

type
  PFL_PACKED4 = ^TFL_PACKED4;
  TFL_PACKED4 = cuint;
  TFL_PACKED = TFL_PACKED4;

const
  FL_RMASK = $000000ff;
  FL_RSHIFT = 0;
  FL_GMASK = $0000ff00;
  FL_GSHIFT = 8;
  FL_BMASK = $00ff0000;
  FL_BSHIFT = 16;
  FL_AMASK = $ff000000;
  FL_ASHIFT = 24;

  { If PCBITS is not 8, we need to apply the RGBmask  }
  { was #define dname(params) para_def_expr }
  { argument types are unknown }
  { return type might be wrong }

function FL_GETR(pack: cint): cint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FL_GETG(pack: cint): cint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FL_GETB(pack: cint): cint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FL_GETA(pack: cint): cint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function FL_PACK3(r, g, b: cint): cint;
function FL_PACK(r, g, b: cint): cint;

//const
//  FL_PACK = FL_PACK3;  
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }

function FL_PACK4(r, g, b, a: cint): cint;

{#define FL_UNPACK( p, r, g, b )   \ }
{    do  r = FL_GETR( p );        \ }
{         g = FL_GETG( p );        \ }
{         b = FL_GETB( p );        \ }
{     while( 0 ) }
//const
//  FL_UNPACK3 = FL_UNPACK;  
{#define FL_UNPACK4( p, r, g, b, a )   \ }
{    do  FL_UNPACK3( p, r, g, b );    \ }
{         a = FL_GETA( p );            \ }
{     while( 0 ) }
{$endif}
type
  PFL_RGB2PIXEL_ = ^TFL_RGB2PIXEL_;

  TFL_RGB2PIXEL_ = record
    rshift: cuint;
    rmask: cuint;
    rbits: cuint;
    gshift: cuint;
    gmask: cuint;
    gbits: cuint;
    bshift: cuint;
    bmask: cuint;
    bbits: cuint;
    bits_per_rgb: cint;
    colormap_size: cint;
  end;

  TFL_RGB2PIXEL = TFL_RGB2PIXEL_;
  {$endif}
  { ! defined FL_XBASIC_H  }
{
 * Local variables:
 * tab-width: 4
 * indent-tabs-mode: nil
 * End:
  }
  {$ifndef FL_POPUP_H}
  {$define FL_POPUP_H}
type
  //  TFL_POPUP_ = TFL_POPUP;
  //  TFL_POPUP_ENTRY_ = TFL_POPUP_ENTRY;
  //  TFL_POPUP_RETURN_ = TFL_POPUP_RETURN;
  PFL_POPUP_RETURN = ^TFL_POPUP_RETURN;
  PFL_POPUP_ENTRY = ^TFL_POPUP_ENTRY;
  PFL_POPUP = ^TFL_POPUP;

  TFL_POPUP_CB = function(para1: PFL_POPUP_RETURN): cint; cdecl;

  TFL_POPUP_RETURN = record
    val: clong;
    user_data: pointer;
    Text: PChar;
    _label: PChar;
    accel: PChar;
    entry: PFL_POPUP_ENTRY;
    popup: PFL_POPUP;
  end;

  TFL_POPUP = record
    Next: PFL_POPUP;
    prev: PFL_POPUP;
    parent: PFL_POPUP;
    top_parent: PFL_POPUP;
    entries: PFL_POPUP_ENTRY;
    title: PChar;
    win: TWindow;
    parent_win: TWindow;
    cursor: TCursor;
    callback: TFL_POPUP_CB;
    use_req_pos: cint;
    req_x: cint;
    req_y: cint;
    x: cint;
    y: cint;
    w: cuint;
    h: cuint;
    min_width: cint;
    title_box_x: cint;
    title_box_y: cint;
    title_box_w: cuint;
    title_box_h: cuint;
    has_subs: cint;
    has_boxes: cint;
    counter: cint;
    title_font_style: cint;
    title_font_size: cint;
    entry_font_style: cint;
    entry_font_size: cint;
    event_mask: cuint;
    bw: cint;
    bg_color: TFL_COLOR;
    on_color: TFL_COLOR;
    title_color: TFL_COLOR;
    text_color: TFL_COLOR;
    text_on_color: TFL_COLOR;
    text_off_color: TFL_COLOR;
    radio_color: TFL_COLOR;
    policy: cint;
    need_recalc: cint;
    ret: TFL_POPUP_RETURN;
  end;

  TFL_POPUP_ENTRY = record
    prev: PFL_POPUP_ENTRY;
    Next: PFL_POPUP_ENTRY;
    popup: PFL_POPUP;
    is_act: cint;
    Text: PChar;
    _label: PChar;
    accel: PChar;
    val: cint;
    user_data: pointer;
    _type: cint;
    state: cuint;
    group: cint;
    sub: PFL_POPUP;
    shortcut: Pcint;
    ulpos: cint;
    callback: TFL_POPUP_CB;
    enter_callback: TFL_POPUP_CB;
    leave_callback: TFL_POPUP_CB;
    x: cint;
    y: cint;
    w: cuint;
    h: cuint;
    box_x: cint;
    box_y: cint;
    box_w: cuint;
    box_h: cuint;
    sl_h: cuint;
    ul_x: cint;
    ul_y: cint;
    ul_w: cuint;
    ul_h: cuint;
  end;

  (* Const before type ignored *)
  { text of entry  }
  { (selection) callback  }
  (* Const before type ignored *)
  { keyboard shortcut description  }
  { type of entry  }
  { disabled, hidden, checked  }

  PFL_POPUP_ITEM = ^TFL_POPUP_ITEM;

  TFL_POPUP_ITEM = record
    Text: PChar;
    callback: TFL_POPUP_CB;
    shortcut: PChar;
    _type: cint;
    state: cint;
  end;
  { Popup policies  }

const
  FL_POPUP_NORMAL_SELECT = 0;
  FL_POPUP_DRAG_SELECT = 1;

  { Popup states  }
  { entry is disabled  }
  { entry is temporarily hidden  }
  { tooogle/radio item is in on state  }
const
  FL_POPUP_NONE = 0;
  FL_POPUP_DISABLED = 1;
  FL_POPUP_HIDDEN = 2;
  FL_POPUP_CHECKED = 4;

  { Popup entry types  }
  { normal popup entry  }
  { toggle ("binary") popup entry  }
  { radio popup entry  }
  { sub-popup popup entry  }
  { line popup entry  }
const
  FL_POPUP_NORMAL = 0;
  FL_POPUP_TOGGLE = 1;
  FL_POPUP_RADIO = 2;
  FL_POPUP_SUB = 3;
  FL_POPUP_LINE = 4;

  { Popup color types  }
const
  FL_POPUP_BACKGROUND_COLOR = 0;
  FL_POPUP_HIGHLIGHT_COLOR = 1;
  FL_POPUP_TITLE_COLOR = 2;
  FL_POPUP_TEXT_COLOR = 3;
  FL_POPUP_HIGHLIGHT_TEXT_COLOR = 4;
  FL_POPUP_DISABLED_TEXT_COLOR = 5;
  FL_POPUP_RADIO_COLOR = 6;

  (* Const before type ignored *)
